--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,10 +1,10 @@
 {% for page in site.pages %}
     {% if page.tags contains "about" %}
-        <a href="{{ page.url }}">{{ page.title }}</a>
+        <a href="blog/{{ page.url }}">{{ page.title }}</a>
     {% endif %}
 {% endfor %}
 {% for page in site.pages %}
     {% if page.tags contains "contact" %}
-        <a href="{{ site.url }}/{{ site.baseurl }} ">{{ page.title }}</a>
+        <a href="blog/{{ page.url }}">{{ page.title }}</a>
     {% endif %}
 {% endfor %}
