--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -5,6 +5,6 @@
 {% endfor %}
 {% for page in site.pages %}
     {% if page.tags contains "contact" %}
-        <a href="{{ page.url }}">{{ page.title }}</a>
+        <a href="https://anshuman23.github.io/blog/contact/">Contact</a>
     {% endif %}
 {% endfor %}
