--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,8 @@
 <footer class="center">
   <div class="measure">
     <small>
-      [Anshuman Chhabra](https://anshuman23.github.io)
+      <a href = 'https://anshuman23.github.io'> Anshuman Chhabra </a>
+      Theme by <a href = 'http://johnotander.com'> John Otander </a>
     </small>
   </div>
 </footer>
