--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,8 @@
 <footer class="center">
   <div class="measure">
     <small>
-      <a href = 'https://anshuman23.github.io'> Anshuman Chhabra </a>
-      Theme by <a href = 'http://johnotander.com'> John Otander </a>
+      Copyright <a href = 'https://anshuman23.github.io'> Anshuman Chhabra </a>
+      . Theme by <a href = 'http://johnotander.com'> John Otander </a>
     </small>
   </div>
 </footer>
