--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <footer class="center">
   <div class="measure">
     <small>
-      Copyright <a href = 'https://anshuman23.github.io'> Anshuman Chhabra </a>
+      Visit <a href = 'https://anshuman23.github.io'> my website </a>
       . Theme by <a href = 'http://johnotander.com'> John Otander </a>
     </small>
   </div>
